--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Anything Helps | SOP Learning Modules</title>
     <meta name="description" content="Landing page for SOP Learning Modules" />
     <meta name="theme-color" content="#2563eb" />
-    <link rel="manifest" href="/assets/manifest.webmanifest" />
-    <link rel="icon" href="/assets/icons/icon-192.png" sizes="192x192" />
-    <link rel="apple-touch-icon" href="/assets/icons/icon-192.png" />
+    <link rel="manifest" href="./assets/manifest.webmanifest" />
+    <link rel="icon" href="./assets/icons/icon-192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="./assets/icons/icon-192.png" />
     <style>
       :root {
         --bg: #f9fafb;
@@ -103,7 +103,7 @@
       // Register service worker for PWA install/offline
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/assets/sw.js').catch(()=>{});
+          navigator.serviceWorker.register('./assets/sw.js').catch(()=>{});
         });
       }
     </script>
